# BlackBelt

./: .gitignore  README.md
Solutions/: CMakeLists.txt  CMakeSettings.json
Solutions/ApplyToMany/: CMakeLists.txt  apply_to_many.cpp
Solutions/BusManager/: CMakeLists.txt  a.in  json.h  main.cpp  manager.h  requests.h  responses.h  svg.h  svg_adders.cpp  test_runner.h
Solutions/EqualsToOneOf/: CMakeLists.txt  equals_to_one_of.cpp
Solutions/JsonPrinter/: CMakeLists.txt  main.cpp
Solutions/MyVector/: CMakeLists.txt  test.cpp  vector.h
Solutions/Mython/: CMakeLists.txt  lexer.cpp  lexer.h  lexer_test.cpp
Solutions/Mython2/: CMakeLists.txt  comparators.cpp  lexer.cpp  lexer.h  lexer_test.cpp  object.cpp  object.h  object_holder.cpp  statement.cpp  statement.h  test_runner.h
Solutions/Nucleotide/: CMakeLists.txt  nucleotide.h  nucleotide_test.cpp  test_runner.h
Solutions/Optional/: CMakeLists.txt  optional.cpp  optional.h
Solutions/PhoneBookProto/: CMakeLists.txt  main.cpp  phone_book.cpp  phone_book.h  test_runner.h
Solutions/ProtobufTest/: CMakeLists.txt  main.cpp  person.pb.cc  person.pb.h  person.proto
Solutions/SaveAndLoad/: CMakeLists.txt  saveload.h  test.cpp
Solutions/YellowPages/: CMakeLists.txt  merge.cpp
